<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:id="@+id/txt_register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:text="@string/register_label"
        android:textColor="#ff8c00"
        android:textSize="45sp" />

    <EditText
        android:id="@+id/edt_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_email"
        android:textColorHint="@color/orange"
        android:textColor="@color/orange"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_password"
        android:textColorHint="@color/orange"
        android:textColor="@color/orange"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_register_CPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_confirmPassword"
        android:textColorHint="@color/orange"
        android:textColor="@color/orange"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_name"
        android:textColorHint="@color/orange"
        android:textColor="@color/orange"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_register_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_dob"
        android:textColorHint="@color/orange"
        android:textColor="@color/orange"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_register_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_gender"
        android:textColorHint="@color/orange"
        android:textColor="@color/orange"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_register_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_city"
        android:textColorHint="@color/orange"
        android:textColor="@color/orange"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="14dp"
        android:text="@string/register_label"
        android:backgroundTint="@color/orange"
        android:textSize="25sp" />
    </LinearLayout>
</ScrollView>